<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:checked="true"
        android:icon="@drawable/ic_bottom_nav_home"
        android:title="@string/after_login_bottom_nav_menu_home" />

    <item
        android:id="@+id/bottom_nav_leads"
        android:checked="true"
        android:icon="@drawable/ic_bottom_nav_leads"
        android:title="@string/after_login_bottom_nav_menu_leads" />

    <item
        android:id="@+id/bottom_nav_wallet"
        android:checked="true"
        android:icon="@drawable/ic_bottom_nav_wallet"
        android:title="@string/after_login_bottom_nav_menu_wallet" />

    <item
        android:id="@+id/bottom_nav_profile"
        android:checked="true"
        android:icon="@drawable/ic_bottom_nav_profile"
        android:title="@string/after_login_bottom_nav_menu_profile" />
</menu>