<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/imageSelectOrCaptureModalBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fromGalleryLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/link_background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp">

        <ImageView
            android:id="@+id/galleryImageView"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_from_gallery" />

        <TextView
            android:id="@+id/galleryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/register_step_one_label_gallery"
            android:textAppearance="@style/MediumFont10"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fromCameraLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/link_background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp">

        <ImageView
            android:id="@+id/cameraImageView"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_from_camera" />

        <TextView
            android:id="@+id/cameraTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:text="@string/register_step_one_label_camera"
            android:textAppearance="@style/MediumFont10"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>