<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/otpHeadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:text="@string/lead_otp_label_otp"
        android:textAppearance="@style/BoldFont18"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEndRoot"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStartRoot"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalTopRoot" />

    <TextView
        android:id="@+id/waitForUserHeadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:text="@string/lead_otp_label_wait_for_user_to_pay_or_share_the_otp"
        android:textAppearance="@style/RegularFont10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEndRoot"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStartRoot"
        app:layout_constraintTop_toBottomOf="@id/otpHeadingTextView" />

    <com.library.pinview.PinView
        android:id="@+id/pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:cursorVisible="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:includeFontPadding="false"
        android:inputType="number"
        android:lineSpacingExtra="0dp"
        android:textAppearance="@style/MediumFont12"
        android:textColor="@color/pin_view_text_colors"
        app:cursorColor="@color/pin_view_line_selected"
        app:cursorWidth="@dimen/_1sdp"
        app:itemCount="4"
        app:itemHeight="@dimen/_40sdp"
        app:itemRadius="@dimen/_2sdp"
        app:itemSpacing="@dimen/_2sdp"
        app:itemWidth="@dimen/_40sdp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEndRoot"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStartRoot"
        app:layout_constraintTop_toBottomOf="@+id/waitForUserHeadingTextView"
        app:lineColor="@color/pin_view_line_colors"
        app:lineWidth="@dimen/_1sdp"
        app:viewType="rectangle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitMaterialButton"
        style="@style/SmallRoundedButton_Red"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/lead_otp_button_submit"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBottomRoot"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEndRoot"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStartRoot"
        app:layout_constraintTop_toBottomOf="@+id/pinView"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalTopRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/_10sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottomRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/_10sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalStartRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_10sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalEndRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_10sdp" />
</androidx.constraintlayout.widget.ConstraintLayout>
